src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_email__c</fullName>
        <label>Applicant email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CityManager__c</fullName>
        <label>CityManager</label>
        <referenceTo>CityManager__c</referenceTo>
        <relationshipLabel>Loan</relationshipLabel>
        <relationshipName>Loan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>